@@ -128,7 +128,7 @@ AC_HEADER_STAT dnl DEFS STAT_MACROS_BROKEN
 AC_HEADER_TIME
 CL_STAT        dnl DEFS HAVE_LSTAT etc
 CL_ELOOP       dnl DEFS ELOOP_VALUE
-CL_CLOSEDIR    dnl DEFS RETCLOSEDIRTYPE, VOID_CLOSEDIR
+CL_CLOSEDIR    dnl DEFS VOID_CLOSEDIR
 CL_IOCTL dnl DEFS HAVE_IOCTL, IOCTL_REQUEST_T, IOCTL_ARGUMENT_T, IOCTL_DOTS HAVE_FIONREAD, NEED_SYS_FILIO_H, NEED_SYS_IOCTL_H, HAVE_RELIABLE_FIONREAD
 CL_POLL dnl DEFS HAVE_POLL, HAVE_RELIABLE_POLL
 CL_SELECT dnl DEFS HAVE_SELECT, SELECT_WIDTH_T, SELECT_SET_T, SELECT_CONST, HAVE_RELIABLE_SELECT
