@@ -1,5 +1,10 @@
 2008-05-31  Bruno Haible  <bruno@clisp.org>
 
+	* m4/closedir.m4 (CL_CLOSEDIR): Remove check for the prototype.
+	Don't define RETCLOSEDIRTYPE any more.
+
+2008-05-31  Bruno Haible  <bruno@clisp.org>
+
 	* configure.in: Remove CL_VOID invocation.
 	* m4/general.m4 (CL_FFCALL_COMMON_TRAMPOLINE): Likewise.
 	* m4/cc-void.m4: Remove file.
